* First-time hint dialog box. For now the only hint explains the arrows displayed before and after rich content items in the midst of the text. For now browser side cookies are used to remember which hints you've seen. * Refactored the modal method to jot.modal where it can be leveraged for any purpose, such as hints. Modals don't currently support stacking, so you need to hide any previous modal before opening a new one. * Code samples correctly align left when the overall widget is centered. * Better box size for toolbar buttons. * Clicking on a content widget now selects the entire widget including its arrows. This makes copying and pasting widgets a lot easier and also helps emphasize that they are a single unit. In general the logic for selecting an entire widget on demand has improved a lot. Works in both Firefox and Chrome. * Undo point timer no longer breaks the focus in modals. * Refactored pushSelection and popSelection to jot.pushSelection and jot.popSelection and made jot.modal responsible for calling them in most situations.

--- a/public/css/content.css
+++ b/public/css/content.css
@@ -33,6 +33,11 @@
   text-align: center;
 }
 
+.jot-code-pre
+{
+  text-align: left;
+}
+
 .jot-right
 {
   float: right;
